[tool.poetry]
name = "reflex_responsive_carousel"
version = "0.1.0"
description = "Reflex custom component carousel"
license = "MIT"
authors = ["Jhanfer <jhafer73@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Jhanfer/reflex_responsive_carousel"
keywords = [
    "reflex",
    "reflex-custom-components"]

classifiers = [
  "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/Jhanfer/reflex_responsive_carousel"

[tool.poetry.dependencies]
python = "^3.11"

reflex = "^0.5.0.post1"
[project.optional-dependencies]
dev = ["build", "twine"]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "poetry.core.masonry.api"
]
build-backend = "setuptools.build_meta"


classifiers = [
  "Development Status :: 4 - Beta",
]

[tool.setuptools.packages.find]
where = ["custom_components"]
